# uniffi-package

./: .gitignore  Cargo.toml  README.md
example/apple/uniffi-package/: ContentView.swift  uniffi_packageApp.swift
example/apple/uniffi-package.xcodeproj/: project.pbxproj
example/apple/uniffi-package.xcworkspace/: contents.xcworkspacedata
example/c-dylib/: readme.md  xcframework.sh
example/rust-lib/: Cargo.toml  build.rs
example/rust-lib/Mobile.package/: Package.swift
example/rust-lib/Mobile.package/Mobile.xcframework/: Info.plist
example/rust-lib/Mobile.package/Mobile.xcframework/ios-arm64/: libmobile_ios.dylib
example/rust-lib/Mobile.package/Mobile.xcframework/ios-arm64_x86_64-simulator/: libmobile_ios_sim.dylib
example/rust-lib/Mobile.package/Mobile.xcframework/macos-arm64_x86_64/: libmobile_macos.dylib
example/rust-lib/Mobile.package/Mobile.xcframework/macos-arm64_x86_64/Headers/: MobileFFI.modulemap
example/rust-lib/Mobile.package/Sources/MobileLib/: Mobile.swift
example/rust-lib/Mobile.package/Sources/MobileLib/Headers/: MobileFFI.h
example/rust-lib/src/: Mobile.udl  lib.rs
example/swift-cmd/: Package.swift
example/swift-cmd/Sources/swift-cmd/: swift_cmd.swift
example/swift-cmd/Tests/swift-cmdTests/: swift_cmdTests.swift
package/: Cargo.toml
package/src/: lib.rs  main.rs
package/src/cmd/: bindgen.rs  cargo.rs  lipo.rs  mod.rs  swift_package.rs  xcodebuild.rs
package/src/conf/: cli.rs  configuration.rs  mod.rs  uniffi.rs
package/src/ext/: mod.rs
