[workspace]

[package]
name = "rust-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]
name = "mobile"

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "src/uniffi-bindgen.rs"
required-features = ["cli"]

[dependencies]
uniffi = "0.23"

[build-dependencies]
uniffi = { version = "0.23", features = ["build"] }
uniffi_swiftpkg_gen = "0.2"

[features]
cli = ["uniffi/cli"]

[package.metadata.uniffi]
udl-file = "src/Mobile.udl"

[package.metadata.uniffi.swift]
release-optimize-std-lib = true
